# LoveConnection

./: .env.example  .gitignore  .replit  GITHUB_PUSH_GUIDE.md  GITHUB_SETUP.md  HOW_TO_DOWNLOAD_FROM_REPLIT.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  test-server.js  test-server.mjs
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/assets/public/: index.html
android/app/src/main/assets/public/assets/: index-BQXkUaT3.css  (+2 more)
client/: index.html
client/src/: App.tsx  index.css
client/src/components/auth/: AuthForm.tsx  FaceVerification.tsx
client/src/components/layout/: Footer.tsx  Header.tsx  MobileNav.tsx
client/src/components/message/: MessageBubble.tsx  MessageInput.tsx
client/src/components/profile/: InterestBadge.tsx  PhotoUpload.tsx  ProfileCard.tsx  ProfileForm.tsx
client/src/components/ui/: button.tsx
client/src/hooks/: use-auth.ts
client/src/lib/: constants.ts
client/src/pages/: conversation.tsx  discover.tsx  face-verification.tsx  forgot-password.tsx  forgot-username.tsx  home.tsx  login.tsx  matches.tsx  messages.tsx  profile.tsx  register.tsx  verify-notification.tsx
python_backend/: .replit  README.md  app.py  requirements.txt  run.py
python_backend/api/: auth.py  behavior.py  discover.py  likes.py  matches.py  profile.py  routes.py
python_backend/models/: db.py  models.py
python_backend/utils/: auth.py  behavior_tracking.py  config.py  email_service.py  helpers.py  matching_algorithm.py
server/: auth.ts  emailService.ts  routes.ts  storage.ts  utils.ts
shared/: schema.ts
